# edc-datatransfer-proxy

./: .dockerignore  .gitignore  Dockerfile  PRD.md  README.md  docker-compose.yml  pyproject.toml
app/: main.py  models.py  proxy.py
docs/superpowers/specs/: 2026-03-18-edc-datatransfer-proxy-design.md  2026-03-19-download-error-problem-target-design.md
tests/: test_download.py  test_project_files.py
